--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="promptModalLabel">Mensagem</h5>
+                    <h5 class="modal-title" id="promptModalLabel">Game Agência diz:</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
